Programming languages and paradigms/Interpreter/examples/bad/invalid_operation.ho
func main() {
    var x = 1 || 3; // error:2:13: invalid operation
}